fix: correct logo image path in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <!-- LOGO PLACEHOLDER: Replace this div with your <img> tag -->
-        <img src="../assets/images/logo.jpg" alt="" class="logo-placeholder">
+        <img src="./assets/images/logo.jpg" alt="" class="logo-placeholder">
         
         <main>
             <h1>Todo lo que necesitas lo encuentras en un <span class="modern-highlight">solo lugar.</span></h1>
