--- a/menu.html
+++ b/menu.html
@@ -4,11 +4,10 @@
         <h2>Nuestro Menú</h2>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=2680&auto=format&fit=crop" alt="Comida 1"></div>
-                <div class="swiper-slide"><img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?q=80&w=2581&auto=format&fit=crop" alt="Comida 2"></div>
-                <div class="swiper-slide"><img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=2670&auto=format&fit=crop" alt="Comida 3"></div>
-               
-                <div class="swiper-slide"><img src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?q=80&w=2670&auto=format&fit=crop" alt="Comida 4"></div>
+                <div class="swiper-slide"><img src="./assets/images/photo1.avif" alt="Comida 1"></div>
+                <div class="swiper-slide"><img src="./assets/images/photo2.avif" alt="Comida 2"></div>
+                <div class="swiper-slide"><img src="./assets/images/photo3.avif" alt="Comida 3"></div>  
+                <div class="swiper-slide"><img src="./assets/images/photo4.avif" alt="Comida 4"></div>
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
