changes on menu

--- a/menu.html
+++ b/menu.html
@@ -4,10 +4,11 @@
         <h2>Nuestro Menú</h2>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./assets/images/photo1.avif" alt="Comida 1"></div>
-                <div class="swiper-slide"><img src="./assets/images/photo2.avif" alt="Comida 2"></div>
-                <div class="swiper-slide"><img src="./assets/images/photo3.avif" alt="Comida 3"></div>  
-                <div class="swiper-slide"><img src="./assets/images/photo4.avif" alt="Comida 4"></div>
+                <div class="swiper-slide"><img src="assets/images/Arepas.webp" alt="Arepas"></div>
+                <div class="swiper-slide"><img src="assets/images/Empanadas.webp" alt="Empanadas"></div>
+                <div class="swiper-slide"><img src="assets/images/Hamburguesas.webp" alt="Hamburguesas"></div>  
+                <div class="swiper-slide"><img src="assets/images/Menu.webp" alt="Menú del día"></div>
+                <div class="swiper-slide"><img src="assets/images/Pizzas.webp" alt="Pizzas"></div>
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
@@ -15,6 +16,6 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
-        <a href="./assets/menu/restaurant-menu.pdf" target="_blank" class="btn btn-primary">Ver menú completo (PDF)</a>
+        <a href="./assets/menu/restaurant-menu2.pdf" target="_blank" class="btn btn-primary">Ver menú completo (PDF)</a>
     </div>
 </div>
